# JujuChat

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/jujuchat/: __init__.py
src/jujuchat/adapters/: __init__.py
src/jujuchat/adapters/rcs/: __init__.py  __main__.py  adapter.py  config.py  media_handler.py  twilio_validator.py
src/jujuchat/adapters/slack/: __init__.py  __main__.py  attachments.py  bot.py  config.py  exceptions.py  logger.py  message_processor.py  scheduler.py  sender.py  streaming.py  upload_handler.py
src/jujuchat/core/: __init__.py  __main__.py  audio_processor.py  config.py  config_providers.py  core.py  file_operations.py  history.py  http_server.py  logging.py  mcp_tools.py  models.py
src/jujuchat/servers/: __init__.py
src/jujuchat/servers/http/: __init__.py  __main__.py  server.py
src/jujuchat/utils/: __init__.py
tests/: test_streaming.py  test_timezone.py
